Began forming the plan

--- a/DSCIProjectIndividual.ipynb
+++ b/DSCIProjectIndividual.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c4044c22-d601-4203-abd6-b3987af0c4a2",
    "metadata": {
     "scrolled": true
@@ -281,40 +281,42 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/players.csv\", destfile = \"players.csv\")\n",
-    "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/sessions.csv\", destfile = \"sessions.csv\")\n",
-    "players <- read_csv(\"players.csv\")\n",
-    "sessions <- read_csv(\"sessions.csv\")\n",
-    "players\n",
-    "sessions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b4dfc5e-1574-4093-b91f-701824b3c21c",
-   "metadata": {},
-   "source": [
-    "However, this project will only use the players dataset because all relevant variables are present there.\n",
-    "In this dataset, there are **196** observations and each observation contains **7 variables**:\n",
-    "- experience (char): categorical with 5 categories describing the experience of the player\n",
-    "   - Beginner, regular, amateur, veteran, pro\n",
-    "- subscribe (logical): true indicates the player is subscribed to a game-related newsletter and false means they are not\n",
-    "- hashedEmail (char): hashed email of the player\n",
-    "- played_hours (double): numerical indiciating how many hours the player has played\n",
-    "- name (char)\n",
-    "- gender (char)\n",
-    "- Age (double)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0278624f-9b75-4e87-8e61-2bd1aac47a13",
-   "metadata": {},
-   "outputs": [
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'Pro'</li><li>'Veteran'</li><li>'Amateur'</li><li>'Regular'</li><li>'Beginner'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'Pro'\n",
+       "\\item 'Veteran'\n",
+       "\\item 'Amateur'\n",
+       "\\item 'Regular'\n",
+       "\\item 'Beginner'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'Pro'\n",
+       "2. 'Veteran'\n",
+       "3. 'Amateur'\n",
+       "4. 'Regular'\n",
+       "5. 'Beginner'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"Pro\"      \"Veteran\"  \"Amateur\"  \"Regular\"  \"Beginner\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -341,13 +343,118 @@
     }
    ],
    "source": [
+    "# Two datasets\n",
+    "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/players.csv\", destfile = \"players.csv\")\n",
+    "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/sessions.csv\", destfile = \"sessions.csv\")\n",
+    "players <- read_csv(\"players.csv\")\n",
+    "sessions <- read_csv(\"sessions.csv\")\n",
+    "players\n",
+    "sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f326bde7-6939-4007-bab5-0fc21a9c254a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'Pro'</li><li>'Veteran'</li><li>'Amateur'</li><li>'Regular'</li><li>'Beginner'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'Pro'\n",
+       "\\item 'Veteran'\n",
+       "\\item 'Amateur'\n",
+       "\\item 'Regular'\n",
+       "\\item 'Beginner'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'Pro'\n",
+       "2. 'Veteran'\n",
+       "3. 'Amateur'\n",
+       "4. 'Regular'\n",
+       "5. 'Beginner'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"Pro\"      \"Veteran\"  \"Amateur\"  \"Regular\"  \"Beginner\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "  experience        subscribe       hashedEmail         played_hours    \n",
+       " Length:196         Mode :logical   Length:196         Min.   :  0.000  \n",
+       " Class :character   FALSE:52        Class :character   1st Qu.:  0.000  \n",
+       " Mode  :character   TRUE :144       Mode  :character   Median :  0.100  \n",
+       "                                                       Mean   :  5.846  \n",
+       "                                                       3rd Qu.:  0.600  \n",
+       "                                                       Max.   :223.100  \n",
+       "                                                                        \n",
+       "     name              gender               Age       \n",
+       " Length:196         Length:196         Min.   : 9.00  \n",
+       " Class :character   Class :character   1st Qu.:17.00  \n",
+       " Mode  :character   Mode  :character   Median :19.00  \n",
+       "                                       Mean   :21.14  \n",
+       "                                       3rd Qu.:22.75  \n",
+       "                                       Max.   :58.00  \n",
+       "                                       NA's   :2      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Summary Statistics\n",
+    "unique(players$experience)\n",
     "summary(players)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b4dfc5e-1574-4093-b91f-701824b3c21c",
+   "metadata": {},
+   "source": [
+    "However, this project will only use the players dataset because all relevant variables are present there.\n",
+    "In this dataset, there are **196 observations** (196 rows) and each observation contains **7 variables** (7 columns):\n",
+    "- experience (character): categorical variable with 5 categories describing the experience of the player\n",
+    "   - Pro, Veteran, Amateur, Regular, Pro\n",
+    "- subscribe (logical): true indicates the player is subscribed to a game-related newsletter, and false means they are not\n",
+    "- hashedEmail (character): hashed email of the player\n",
+    "- played_hours (double): numerical variable indiciating how many hours the player has played MineCraft\n",
+    "- name (character): first name of the player\n",
+    "- gender (character): gender of the player\n",
+    "- Age (double): age of the player\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a58f125-2f1f-4e6a-ba1e-315fa84b570b",
+   "metadata": {},
+   "source": [
+    "**How the data will help answer the question**\n",
+    "The dataset contains the player information variables that we can explore to help answer our question. Knn classification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2040204d-0388-434b-a24f-0b34532afe77",
+   "id": "8796c297-10be-4289-9c36-03cdb8915953",
    "metadata": {},
    "outputs": [],
    "source": []
