--- a/DSCIProjectIndividual.ipynb
+++ b/DSCIProjectIndividual.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "c4044c22-d601-4203-abd6-b3987af0c4a2",
    "metadata": {
     "scrolled": true
@@ -281,69 +281,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'Pro'</li><li>'Veteran'</li><li>'Amateur'</li><li>'Regular'</li><li>'Beginner'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'Pro'\n",
-       "\\item 'Veteran'\n",
-       "\\item 'Amateur'\n",
-       "\\item 'Regular'\n",
-       "\\item 'Beginner'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'Pro'\n",
-       "2. 'Veteran'\n",
-       "3. 'Amateur'\n",
-       "4. 'Regular'\n",
-       "5. 'Beginner'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] \"Pro\"      \"Veteran\"  \"Amateur\"  \"Regular\"  \"Beginner\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "  experience        subscribe       hashedEmail         played_hours    \n",
-       " Length:196         Mode :logical   Length:196         Min.   :  0.000  \n",
-       " Class :character   FALSE:52        Class :character   1st Qu.:  0.000  \n",
-       " Mode  :character   TRUE :144       Mode  :character   Median :  0.100  \n",
-       "                                                       Mean   :  5.846  \n",
-       "                                                       3rd Qu.:  0.600  \n",
-       "                                                       Max.   :223.100  \n",
-       "                                                                        \n",
-       "     name              gender               Age       \n",
-       " Length:196         Length:196         Min.   : 9.00  \n",
-       " Class :character   Class :character   1st Qu.:17.00  \n",
-       " Mode  :character   Mode  :character   Median :19.00  \n",
-       "                                       Mean   :21.14  \n",
-       "                                       3rd Qu.:22.75  \n",
-       "                                       Max.   :58.00  \n",
-       "                                       NA's   :2      "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Two datasets\n",
+    "# Reading the two datasets\n",
     "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/players.csv\", destfile = \"players.csv\")\n",
     "download.file(url = \"https://raw.githubusercontent.com/mannats74/DSCIProjectIndividual/refs/heads/main/sessions.csv\", destfile = \"sessions.csv\")\n",
     "players <- read_csv(\"players.csv\")\n",
@@ -354,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f326bde7-6939-4007-bab5-0fc21a9c254a",
    "metadata": {},
    "outputs": [
@@ -431,15 +372,18 @@
    "source": [
     "However, this project will only use the players dataset because all relevant variables are present there.\n",
     "In this dataset, there are **196 observations** (196 rows) and each observation contains **7 variables** (7 columns):\n",
-    "- experience (character): categorical variable with 5 categories describing the experience of the player\n",
+    "- `experience` (character): categorical variable with 5 categories describing the experience of the player\n",
     "   - Pro, Veteran, Amateur, Regular, Pro\n",
-    "- subscribe (logical): true indicates the player is subscribed to a game-related newsletter, and false means they are not\n",
-    "- hashedEmail (character): hashed email of the player\n",
-    "- played_hours (double): numerical variable indiciating how many hours the player has played MineCraft\n",
-    "- name (character): first name of the player\n",
-    "- gender (character): gender of the player\n",
-    "- Age (double): age of the player\n",
-    "\n"
+    "- `subscribe` (logical): true indicates the player is subscribed to a game-related newsletter, and false means they are not\n",
+    "- `hashedEmail` (character): hashed email of the player\n",
+    "- `played_hours` (double): numerical variable indiciating how many hours the player has played MineCraft\n",
+    "- `name` (character): first name of the player\n",
+    "- `gender` (character): gender of the player\n",
+    "- `Age` (double): age of the player\n",
+    "\n",
+    "***Issues with the data***\n",
+    "\n",
+    "***How the data was collected***"
    ]
   },
   {
@@ -448,7 +392,8 @@
    "metadata": {},
    "source": [
     "**How the data will help answer the question**\n",
-    "The dataset contains the player information variables that we can explore to help answer our question. Knn classification"
+    "\n",
+    "The dataset contains the player information variables that we can explore to help answer our question. We will use **5 out of the 7** variables. The ***explanatory variables*** are `experience`, `played_hours`, `gender`, and `age`, and the ***response variable*** is `subscribe`. The name and hashedEmail are irrelevant to our question. Knn classification"
    ]
   },
   {
