Analyzed sessions dataset

--- a/DSCIProjectIndividual.ipynb
+++ b/DSCIProjectIndividual.ipynb
@@ -47,7 +47,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "c4044c22-d601-4203-abd6-b3987af0c4a2",
    "metadata": {
     "scrolled": true
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f326bde7-6939-4007-bab5-0fc21a9c254a",
    "metadata": {},
    "outputs": [
@@ -357,12 +357,37 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       " hashedEmail         start_time          end_time         original_start_time\n",
+       " Length:1535        Length:1535        Length:1535        Min.   :1.712e+12  \n",
+       " Class :character   Class :character   Class :character   1st Qu.:1.716e+12  \n",
+       " Mode  :character   Mode  :character   Mode  :character   Median :1.719e+12  \n",
+       "                                                          Mean   :1.719e+12  \n",
+       "                                                          3rd Qu.:1.722e+12  \n",
+       "                                                          Max.   :1.727e+12  \n",
+       "                                                                             \n",
+       " original_end_time  \n",
+       " Min.   :1.712e+12  \n",
+       " 1st Qu.:1.716e+12  \n",
+       " Median :1.719e+12  \n",
+       " Mean   :1.719e+12  \n",
+       " 3rd Qu.:1.722e+12  \n",
+       " Max.   :1.727e+12  \n",
+       " NA's   :2          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Summary Statistics\n",
     "unique(players$experience)\n",
-    "summary(players)"
+    "summary(players)\n",
+    "summary(sessions)"
    ]
   },
   {
@@ -370,7 +395,7 @@
    "id": "3b4dfc5e-1574-4093-b91f-701824b3c21c",
    "metadata": {},
    "source": [
-    "However, this project will only use the players dataset because all relevant variables are present there.\n",
+    "However, this project will focus on the `players` dataset because all relevant variables are present there.\n",
     "In this dataset, there are **196 observations** (196 rows) and each observation contains **7 variables** (7 columns):\n",
     "- `experience` (character): categorical variable with 5 categories describing the experience of the player\n",
     "   - Pro, Veteran, Amateur, Regular, Pro\n",
@@ -381,6 +406,12 @@
     "- `gender` (character): gender of the player\n",
     "- `Age` (double): age of the player\n",
     "\n",
+    "The second dataset is `sessions` and will only be analyzed but not used to answer the broad and specific questions. In this dataset, there are **1535 observations** (1535 rows) and **5 variables** (5 columns):\n",
+    "- `hashedEmail` (character): hashed email of the player\n",
+    "- `start_time` (character): date and time at the beginning of the session in character form\n",
+    "- `end_time` (character): date and time at the end of the session in character form\n",
+    "- `original_start_time` (double): time at the beginning of the session in numeric form\n",
+    "- `original_end_time` (double): time at the end of the session in numeric form\n",
     "***Issues with the data***\n",
     "\n",
     "***How the data was collected***"
