--- a/DSCIProjectIndividual.ipynb
+++ b/DSCIProjectIndividual.ipynb
@@ -504,9 +504,103 @@
     "- There are some missing `age` values in the `players` dataset\n",
     "- The `sessions` dataset is untidy\n",
     "- There are some missing values in `original_end_time` in `sessions`\n",
+    "- One potential issue is the outliers with significantly different/ higher values than the majority of the observations\n",
     "\n",
     "***How the data was collected***\n",
     "- Through recording each player's gameplay, speech, and keys pressed in PLAICraft Minecraft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "86e7dd0c-9842-429f-8d75-12c2bc197970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A spec_tbl_df: 194 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>experience</th><th scope=col>subscribe</th><th scope=col>hashedEmail</th><th scope=col>played_hours</th><th scope=col>name</th><th scope=col>gender</th><th scope=col>Age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Pro    </td><td> TRUE</td><td>f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8b53e192d</td><td>30.3</td><td>Morgan   </td><td>Male</td><td> 9</td></tr>\n",
+       "\t<tr><td>Veteran</td><td> TRUE</td><td>f3c813577c458ba0dfef80996f8f32c93b6e8af1fa939732842f2312358a88e9</td><td> 3.8</td><td>Christian</td><td>Male</td><td>17</td></tr>\n",
+       "\t<tr><td>Veteran</td><td>FALSE</td><td>b674dd7ee0d24096d1c019615ce4d12b20fcbff12d79d3c5a9d2118eb7ccbb28</td><td> 0.0</td><td>Blake    </td><td>Male</td><td>17</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>Veteran</td><td>FALSE</td><td>71453e425f07d10da4fa2b349c83e73ccdf0fb3312f778b35c5802c3292c87bd</td><td>0.3</td><td>Pascal</td><td>Male             </td><td>22</td></tr>\n",
+       "\t<tr><td>Amateur</td><td>FALSE</td><td>d572f391d452b76ea2d7e5e53a3d38bfd7499c7399db299bd4fedb06a46ad5bb</td><td>0.0</td><td>Dylan </td><td>Prefer not to say</td><td>57</td></tr>\n",
+       "\t<tr><td>Amateur</td><td>FALSE</td><td>f19e136ddde68f365afc860c725ccff54307dedd13968e896a9f890c40aea436</td><td>2.3</td><td>Harlow</td><td>Male             </td><td>17</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 194 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " experience & subscribe & hashedEmail & played\\_hours & name & gender & Age\\\\\n",
+       " <chr> & <lgl> & <chr> & <dbl> & <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t Pro     &  TRUE & f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8b53e192d & 30.3 & Morgan    & Male &  9\\\\\n",
+       "\t Veteran &  TRUE & f3c813577c458ba0dfef80996f8f32c93b6e8af1fa939732842f2312358a88e9 &  3.8 & Christian & Male & 17\\\\\n",
+       "\t Veteran & FALSE & b674dd7ee0d24096d1c019615ce4d12b20fcbff12d79d3c5a9d2118eb7ccbb28 &  0.0 & Blake     & Male & 17\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t Veteran & FALSE & 71453e425f07d10da4fa2b349c83e73ccdf0fb3312f778b35c5802c3292c87bd & 0.3 & Pascal & Male              & 22\\\\\n",
+       "\t Amateur & FALSE & d572f391d452b76ea2d7e5e53a3d38bfd7499c7399db299bd4fedb06a46ad5bb & 0.0 & Dylan  & Prefer not to say & 57\\\\\n",
+       "\t Amateur & FALSE & f19e136ddde68f365afc860c725ccff54307dedd13968e896a9f890c40aea436 & 2.3 & Harlow & Male              & 17\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 194 × 7\n",
+       "\n",
+       "| experience &lt;chr&gt; | subscribe &lt;lgl&gt; | hashedEmail &lt;chr&gt; | played_hours &lt;dbl&gt; | name &lt;chr&gt; | gender &lt;chr&gt; | Age &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Pro     |  TRUE | f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8b53e192d | 30.3 | Morgan    | Male |  9 |\n",
+       "| Veteran |  TRUE | f3c813577c458ba0dfef80996f8f32c93b6e8af1fa939732842f2312358a88e9 |  3.8 | Christian | Male | 17 |\n",
+       "| Veteran | FALSE | b674dd7ee0d24096d1c019615ce4d12b20fcbff12d79d3c5a9d2118eb7ccbb28 |  0.0 | Blake     | Male | 17 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| Veteran | FALSE | 71453e425f07d10da4fa2b349c83e73ccdf0fb3312f778b35c5802c3292c87bd | 0.3 | Pascal | Male              | 22 |\n",
+       "| Amateur | FALSE | d572f391d452b76ea2d7e5e53a3d38bfd7499c7399db299bd4fedb06a46ad5bb | 0.0 | Dylan  | Prefer not to say | 57 |\n",
+       "| Amateur | FALSE | f19e136ddde68f365afc860c725ccff54307dedd13968e896a9f890c40aea436 | 2.3 | Harlow | Male              | 17 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    experience subscribe\n",
+       "1   Pro         TRUE    \n",
+       "2   Veteran     TRUE    \n",
+       "3   Veteran    FALSE    \n",
+       "⋮   ⋮          ⋮        \n",
+       "192 Veteran    FALSE    \n",
+       "193 Amateur    FALSE    \n",
+       "194 Amateur    FALSE    \n",
+       "    hashedEmail                                                     \n",
+       "1   f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8b53e192d\n",
+       "2   f3c813577c458ba0dfef80996f8f32c93b6e8af1fa939732842f2312358a88e9\n",
+       "3   b674dd7ee0d24096d1c019615ce4d12b20fcbff12d79d3c5a9d2118eb7ccbb28\n",
+       "⋮   ⋮                                                               \n",
+       "192 71453e425f07d10da4fa2b349c83e73ccdf0fb3312f778b35c5802c3292c87bd\n",
+       "193 d572f391d452b76ea2d7e5e53a3d38bfd7499c7399db299bd4fedb06a46ad5bb\n",
+       "194 f19e136ddde68f365afc860c725ccff54307dedd13968e896a9f890c40aea436\n",
+       "    played_hours name      gender            Age\n",
+       "1   30.3         Morgan    Male               9 \n",
+       "2    3.8         Christian Male              17 \n",
+       "3    0.0         Blake     Male              17 \n",
+       "⋮   ⋮            ⋮         ⋮                 ⋮  \n",
+       "192 0.3          Pascal    Male              22 \n",
+       "193 0.0          Dylan     Prefer not to say 57 \n",
+       "194 2.3          Harlow    Male              17 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Tidying data by removing NA Age observations\n",
+    "tidy_players <- filter(players, !is.na(Age))\n",
+    "tidy_players"
    ]
   },
   {
@@ -1961,10 +2055,10 @@
    ],
    "source": [
     "# Visualization 1: Age vs Hours Played Scatter Plot\n",
-    "ggplot(players, aes(x = Age, y = played_hours, color = subscribe)) +\n",
+    "ggplot(tidy_players, aes(x = Age, y = played_hours, color = subscribe)) +\n",
     "       geom_point() + \n",
     "       labs(title = \"Age vs Hours Played by Subscription in Minecraft\", x = \"Age (years)\", \"Hours Played\", color = \"Subscribed\")\n",
-    "ggplot(filter(players, played_hours < 4), aes(x = Age, y = played_hours, color = subscribe)) +\n",
+    "ggplot(filter(tidy_players, played_hours < 4), aes(x = Age, y = played_hours, color = subscribe)) +\n",
     "       geom_point() + \n",
     "       labs(title = \"Age vs Hours Played by Subscription in Minecraft\", x = \"Age (years)\", \"Hours Played\", color = \"Subscribed\")"
    ]
@@ -3370,13 +3464,13 @@
    ],
    "source": [
     "# Visualization 2: Age Histogram, Age Histogram of subscribed players and Age Histogram of not subscribed players\n",
-    "ggplot(players, aes(x = Age)) +\n",
+    "ggplot(tidy_players, aes(x = Age)) +\n",
     "    geom_histogram(binwidth = 4, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of Age\", x = \"Player Age (Years)\", y = \"Number of players\")\n",
-    "ggplot(filter(players, subscribe == \"TRUE\"), aes(x = Age)) +\n",
+    "ggplot(filter(tidy_players, subscribe == \"TRUE\"), aes(x = Age)) +\n",
     "    geom_histogram(binwidth = 4, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of Subscriber Age\", x = \"Subscriber Age (Years)\", y = \"Number of subscribers\")\n",
-    "ggplot(filter(players, subscribe == \"FALSE\"), aes(x = Age)) +\n",
+    "ggplot(filter(tidy_players, subscribe == \"FALSE\"), aes(x = Age)) +\n",
     "    geom_histogram(binwidth = 4, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of Non Subscriber Age\", x = \"Non Subscriber Age (Years)\", y = \"Number of non subscribers\")"
    ]
@@ -4853,13 +4947,13 @@
    ],
    "source": [
     "# Visualization 3: hours played Histogram, hours played Histogram of subscribed players and hours played Histogram of not subscribed players\n",
-    "ggplot(players, aes(x = played_hours)) +\n",
+    "ggplot(tidy_players, aes(x = played_hours)) +\n",
     "    geom_histogram(binwidth = 4, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of hours played\", x = \"hours played\", y = \"Number of players\")\n",
-    "ggplot(filter(players, subscribe == \"TRUE\"), aes(x = played_hours)) +\n",
+    "ggplot(filter(tidy_players, subscribe == \"TRUE\"), aes(x = played_hours)) +\n",
     "    geom_histogram(binwidth = 4, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of hours played by subscribers\", x = \"Subscriber hours played\", y = \"Number of subscribers\")\n",
-    "ggplot(filter(players, subscribe == \"FALSE\"), aes(x = played_hours)) +\n",
+    "ggplot(filter(tidy_players, subscribe == \"FALSE\"), aes(x = played_hours)) +\n",
     "    geom_histogram(binwidth = 0.5, color = \"black\", fill = \"lightblue\") +\n",
     "    labs(title = \"Distribution of hours played by Non Subscribers\", x = \"Non Subscriber hours played\", y = \"Number of non subscribers\")"
    ]
@@ -4886,25 +4980,25 @@
    "source": [
     "**How the data will help answer the question**\n",
     "\n",
-    "The dataset contains the player information variables that we can explore to help answer our question. We will focus on **3 out of the 7** variables. The ***explanatory variables*** are `played_hours` and `age`, and the ***response variable*** is `subscribe`. These explanatory variables contain player demographic and usage information, which may influence their possibility of subscribing. The `experience`, `name`, `gender` and `hashedEmail` are irrelevant to our question.  \n",
-    "## You may need to describe how you plan to wrangle your data to get it into a form where you can apply one of the predictive methods from this class.\n",
-    "\n",
+    "The dataset contains the player information variables that we can explore to help answer our question. We will focus on **3 out of the 7** variables. The ***explanatory variables*** are `played_hours` and `age`, and the ***response variable*** is `subscribe`. These explanatory variables contain player demographic and usage information, which may influence their possibility of subscribing. The `experience`, `name`, `gender` and `hashedEmail` are irrelevant to our question. The data will need to be standardized before applying our model.\n",
     "\n",
     "**The Plan**  \n",
     "This report will use K-Nearest Neighbours (KNN) Classification model:\n",
     "- because it is a binary classification\n",
     "- Assumptions include:\n",
     "  - standardized data\n",
-    "  - "
+    "  - enough close observations\n",
+    "- Limitations/ Weaknesses include:\n",
+    "  - sensitive to scaling because it uses distance\n",
+    "  - may have issues with the outliers\n",
+    "- it will use multiple values of K and calculate accuracy to ensure correct selection\n",
+    "- Processing:\n",
+    "  - Split the data into training and testing\n",
+    "  - standardize data\n",
+    "  - use cross-validation\n",
+    "\n",
+    "## GitHub Repository Link  \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8796c297-10be-4289-9c36-03cdb8915953",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
